# mctl-rs

./: .drone.yml  Cargo.toml  PKGBUILD  README.md  build.rs
.github/workflows/: build.yaml  release.yml
src/: cli.rs  config.rs  control.rs  error.rs  main.rs
