cargo-features = ["strip"]

[package]
name = "mctl"
version = "0.1.0"
authors = ["Uttarayan Mondal <uttarayan21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
derive_more = "0.99.13"
mpd = "0.0.12"
mpris = "1.1.2"
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml = "0.8.17"
xdg = "2.2.0"

[profile.release]
strip = "symbols"
