# cargo-features = ["strip"]
[package]
name = "mctl"
version = "0.1.3"
authors = ["Uttarayan Mondal <uttarayan21@gmail.com>"]
edition = "2018"
description = "Control both mpd and mpris musicplayers with one command"
homepage = "https://github.com/uttarayan21/mctl-rs"
repository = "https://github.com/uttarayan21/mctl-rs"
license = "MIT"
build = "build.rs"
exclude = [".drone.yml", ".github/*"]

[dependencies]
clap = "2.33.3"
derive_more = "0.99.13"
mpd = "0.0.12"
mpris = "1.1.2"
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml = "0.8.17"
xdg = "2.2.0"

[build-dependencies]
clap = "2.33.3"

# [profile.release]
# strip = "symbols"
